--- a/whisperAI.vcxproj
+++ b/whisperAI.vcxproj
@@ -79,18 +79,24 @@
     <ClCompile Include="src\PrecisionTimer.cpp" />
     <ClCompile Include="src\Vector2D.cpp" />
     <ClCompile Include="src\WindowUtils.cpp" />
+    <ClCompile Include="src\Wpgdi.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Constants.h" />
+    <ClInclude Include="src\GraphEdge.h" />
+    <ClInclude Include="src\GraphNode.h" />
+    <ClInclude Include="src\GraphUtils.h" />
     <ClInclude Include="src\PathFinder.h" />
     <ClInclude Include="src\PrecisionTimer.h" />
     <ClInclude Include="src\resource.h" />
+    <ClInclude Include="src\StreamUtils.h" />
+    <ClInclude Include="src\Utils.h" />
     <ClInclude Include="src\Vector2D.h" />
     <ClInclude Include="src\WindowUtils.h" />
+    <ClInclude Include="src\Wpgdi.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="icon1.ico" />
-    <None Include="toolbar.aps" />
     <None Include="toolbar1.bmp" />
   </ItemGroup>
   <ItemGroup>
