--- a/whisperAI.vcxproj
+++ b/whisperAI.vcxproj
@@ -83,12 +83,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Constants.h" />
+    <ClInclude Include="src\GraphAlgorithms.h" />
     <ClInclude Include="src\GraphEdge.h" />
     <ClInclude Include="src\GraphNode.h" />
     <ClInclude Include="src\GraphUtils.h" />
     <ClInclude Include="src\PathFinder.h" />
     <ClInclude Include="src\PrecisionTimer.h" />
     <ClInclude Include="src\resource.h" />
+    <ClInclude Include="src\SparseGraph.h" />
     <ClInclude Include="src\StreamUtils.h" />
     <ClInclude Include="src\Utils.h" />
     <ClInclude Include="src\Vector2D.h" />
